add quickSearch to stats
